--- a/Services/graphite.yml
+++ b/Services/graphite.yml
@@ -8,7 +8,7 @@ spec:
     - name: graphite
       port: 80
       protocol: TCP
-      targetPort: 80
+      nodePort: 31337
   selector:
     run: statsd
   sessionAffinity: None
